# Personal-Cpp-Libraries

sfml-3d/: 3d_camera.hpp  3d_engine.hpp  Object3D.hpp  Shape2D.hpp  math4.hpp
sfml-3d/Old/: 3d_camera_old.hpp  3d_engine_old.hpp
sfml-3d/Sheets/: log.txt  oop.txt
sfml-util/: sfml_util.hpp
tests/: CMakeLists.txt  test.cpp
tests/old/: 3d_engine_2d_test.cpp  3d_engine_3d_test.cpp  test_template.cpp
